--- a/TPCGrupo8A/Site.Master
+++ b/TPCGrupo8A/Site.Master
@@ -11,8 +11,8 @@
     <title><%: Page.Title %> - ECommerce</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-r1nO4Hs49S1XLav+I5FexLNUxAXC5u/F6tCHaNNTwB1s5BPD9X5gHXYz8FIMc6aG" crossorigin="anonymous">
-   
-    
+
+
 
 
     <asp:PlaceHolder runat="server">
@@ -25,55 +25,56 @@
 </head>
 <body>
     <form runat="server">
-       <asp:ScriptManager runat="server">
-    <Scripts>
-        <asp:ScriptReference Name="MsAjaxBundle" />
-        <asp:ScriptReference Name="jquery" Path="https://code.jquery.com/jquery-3.7.0.min.js" />
-        <asp:ScriptReference Name="WebForms.js" Assembly="System.Web" Path="~/Scripts/WebForms/WebForms.js" />
-        <asp:ScriptReference Name="WebUIValidation.js" Assembly="System.Web" Path="~/Scripts/WebForms/WebUIValidation.js" />
-        <asp:ScriptReference Name="MenuStandards.js" Assembly="System.Web" Path="~/Scripts/WebForms/MenuStandards.js" />
-        <asp:ScriptReference Name="GridView.js" Assembly="System.Web" Path="~/Scripts/WebForms/GridView.js" />
-        <asp:ScriptReference Name="DetailsView.js" Assembly="System.Web" Path="~/Scripts/WebForms/DetailsView.js" />
-        <asp:ScriptReference Name="TreeView.js" Assembly="System.Web" Path="~/Scripts/WebForms/TreeView.js" />
-        <asp:ScriptReference Name="WebParts.js" Assembly="System.Web" Path="~/Scripts/WebForms/WebParts.js" />
-        <asp:ScriptReference Name="Focus.js" Assembly="System.Web" Path="~/Scripts/WebForms/Focus.js" />
-        <asp:ScriptReference Name="WebFormsBundle" />
-    </Scripts>
-</asp:ScriptManager>
+        <asp:ScriptManager runat="server">
+            <Scripts>
+                <asp:ScriptReference Name="MsAjaxBundle" />
+                <asp:ScriptReference Name="jquery" Path="https://code.jquery.com/jquery-3.7.0.min.js" />
+                <asp:ScriptReference Name="WebForms.js" Assembly="System.Web" Path="~/Scripts/WebForms/WebForms.js" />
+                <asp:ScriptReference Name="WebUIValidation.js" Assembly="System.Web" Path="~/Scripts/WebForms/WebUIValidation.js" />
+                <asp:ScriptReference Name="MenuStandards.js" Assembly="System.Web" Path="~/Scripts/WebForms/MenuStandards.js" />
+                <asp:ScriptReference Name="GridView.js" Assembly="System.Web" Path="~/Scripts/WebForms/GridView.js" />
+                <asp:ScriptReference Name="DetailsView.js" Assembly="System.Web" Path="~/Scripts/WebForms/DetailsView.js" />
+                <asp:ScriptReference Name="TreeView.js" Assembly="System.Web" Path="~/Scripts/WebForms/TreeView.js" />
+                <asp:ScriptReference Name="WebParts.js" Assembly="System.Web" Path="~/Scripts/WebForms/WebParts.js" />
+                <asp:ScriptReference Name="Focus.js" Assembly="System.Web" Path="~/Scripts/WebForms/Focus.js" />
+                <asp:ScriptReference Name="WebFormsBundle" />
+            </Scripts>
+        </asp:ScriptManager>
 
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark" style="background-color: #fa8072 !important;">
             <div class="container">
-                <a class="navbar-brand" runat="server" href="~/Default" style="font-size: 2rem; color:black;">Ecommerce</a>
+                <a class="navbar-brand" runat="server" href="~/Default" style="font-size: 2rem; color: black;">Ecommerce</a>
                 <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Alternar navegación" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-header">
                     <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link animated-button"  runat="server" href="#contacto">Contacto</a></li>
+                        <li class="nav-item"><a class="nav-link animated-button" runat="server" href="#contacto">Contacto</a></li>
                         <%--Admin--%>
-                        <li class="nav-item" ><a class="nav-link animated-button"  id="linkAdmin" runat="server" href="~/Administrador.aspx">Administrador</a></li>
+                        <li class="nav-item"><a class="nav-link animated-button" id="linkAdmin" runat="server" href="~/Administrador.aspx">Administrador</a></li>
                         <li class="nav-item" style="margin-left: 5px !important;" runat="server" id="IngresarBoton" visible='<%# Session["usuario"] == null %>'>
-                            <a class="nav-link animated-button"  runat="server" href="~/IniciarSesion">
+                            <a class="nav-link animated-button" runat="server" href="~/IniciarSesion">
                                 <i class="bi bi-person"></i>Ingresar</a>
                         </li>
+                        <%if(tipoUsuario == 0)
+                        {%>
+                        <li class="nav-item">
+                            <a href="CarritoPago.aspx" class="nav-link animated-button">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24"><g fill="none" stroke="black" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"><circle cx="8" cy="21" r="1"/><circle cx="19" cy="21" r="1"/><path d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12"/>
+                                     </g>
+                                </svg>
+                            </a>
+                        </li>
+                        <% }%>
                     </ul>
                 </div>
             </div>
         </nav>
-
-
-        
-
-
-
-
-
-
         <div class="navbar-dropdown" style="background-color: black; padding: 0; display: flex; justify-content: center;">
 
             <div class="btn-group">
-                <button class="dropdown-nav"  type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <button class="dropdown-nav" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Marcas
                 </button>
                 <ul id="ulMarcas" class="dropdown-menu bg-light" runat="server">
@@ -90,16 +91,16 @@
                 </ul>
             </div>
             <div class="btn-group" runat="server" id="MiCuentaMenu" visible='<%# Session["usuario"] != null %>'>
-        <button class="dropdown-nav" type="button" data-bs-toggle="dropdown" aria-expanded="false">Mi Cuenta</button>
-        <ul class="dropdown-menu bg-light">
-            <li><a class="dropdown-item" href="/Perfil">Perfil</a></li>
-            <li><a class="dropdown-item" href="/Pedidos">Pedidos</a></li>
-            <%--<li><a class="dropdown-item" href="#">Cerrar Sesión</a></li>--%>
-            <%--<li><a class="dropdown-item" href="/CerrarSesion">Cerrar Sesión</a></li>--%>
-            <asp:LinkButton ID="CerrarSesion" CssClass="dropdown-item" OnClick="CerrarSesion_OnClick" runat="server">Cerrar Sesión</asp:LinkButton>
-        </ul>
+                <button class="dropdown-nav" type="button" data-bs-toggle="dropdown" aria-expanded="false">Mi Cuenta</button>
+                <ul class="dropdown-menu bg-light">
+                    <li><a class="dropdown-item" href="/Perfil">Perfil</a></li>
+                    <li><a class="dropdown-item" href="/Pedidos">Pedidos</a></li>
+                    <%--<li><a class="dropdown-item" href="#">Cerrar Sesión</a></li>--%>
+                    <%--<li><a class="dropdown-item" href="/CerrarSesion">Cerrar Sesión</a></li>--%>
+                    <asp:LinkButton ID="CerrarSesion" CssClass="dropdown-item" OnClick="CerrarSesion_OnClick" runat="server">Cerrar Sesión</asp:LinkButton>
+                </ul>
+            </div>
         </div>
-     </div>
         <div class="container body-content">
             <asp:ContentPlaceHolder ID="MainContent" runat="server"></asp:ContentPlaceHolder>
             <hr />
@@ -111,12 +112,12 @@
     <script>
 </script>
 
-   <%-- <asp:PlaceHolder runat="server">
+    <%-- <asp:PlaceHolder runat="server">
         <%: Scripts.Render("~/Scripts/bootstrap.js") %>
     </asp:PlaceHolder>--%>
 
-    <%-- jQuery para el modal categorías --%> 
-<script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <%-- jQuery para el modal categorías --%>
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
